grammar.js
    module: $ => seq(
      optional($.prelude),
      repeat($.import),
      repeat($._command),
    ),

    _command: $ => choice(
      // Declarations, notations, and examples with optional leading modifiers
      seq(repeat($._modifier), choice(
        $._declaration, $.declaration, $.example,
        $.notation, $.attribute,
      )),
      // Other commands (no modifiers)
      $.namespace,
      $.section,
      $.end,
      $.open,
      $.export,
      $.variable,
      $.universe,
      $.hash_command,
    ),

    // Modifier keywords consumed transparently (no node created)
    _modifier: _ => choice('noncomputable', 'partial', 'protected', 'private', 'unsafe', 'scoped', 'local'),


    // Namespace: `namespace Foo` or `namespace Foo.Bar.Baz`
    attribute: $ => prec.left(seq(
      'attribute',
      '[', commaSep1($.identifier), ']',
      repeat1($._expression),
    )),

    // `notation:10000 n "!" => factorial n`
    example: $ => seq(
      'example',
      optional(field('binders', $.binders)),
      optional($._type_spec),
      ':=',
      field('body', $._expression),
    ),

    // ============================================================
    // Declarations
    // ============================================================

    _declaration: $ => choice(
      $.definition,
      alias($._instance_decl, $.definition),
      $.constant,
      $.axiom,
      $.structure,
      $.inductive,
    ),

    // `@[simp] def f := 12` — declaration with leading attributes
    declaration: $ => seq(
      field('attributes', $.attributes),
      repeat($._modifier),
      $._declaration,
    ),

    // `@[simp, inline]` or `@[extern "foo"]`
    attributes: $ => seq(
      '@', '[',
      repeat1(choice(
        seq('extern', field('extern', $.string)),
        field('name', $._name),
        ',',
      )),
      ']',
    ),

    // def/theorem/lemma/abbrev — name is required, no ambiguity with binders.
    // Modifiers (noncomputable, partial, etc.) are consumed transparently.
    definition: $ => seq(
      field('kind', choice('def', 'theorem', 'lemma', 'abbrev')),
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional($._type_spec),
      $._declaration_body,
    ),

    // Shared body production for definition and instance — factored out
    // to let the parser reuse states across both declaration forms.
    _declaration_body: $ => choice(
      seq(':=', $._layout_start, field('body', $._expression), optional($._layout_end)),
      seq('where', $._layout_start, repeat1(seq(field('body', $.where_decl), optional($._layout_semicolon))), optional($._layout_end)),
      repeat1($.match_arm),
    ),

    // instance — name is optional; aliased to `definition` in the parse tree.
    // Instance binders are always bracketed (no bare identifier ambiguity with name).
    where_decl: $ => seq(
      field('name', $.identifier),
      repeat(field('binders', choice($.identifier, $._bracketed_binder))),
      optional($._type_spec),
      ':=',
      $._layout_start,
      field('body', $._expression),
      optional($._layout_end),
    ),

    // `constant foo : T` — opaque constant declaration
    constant: $ => seq(
      'constant',
      field('name', $._name),
      optional($._type_spec),
      optional(seq(':=', field('body', $._expression))),
    ),

    // `axiom foo : T` — axiomatic declaration
    axiom: $ => seq(
      'axiom',
      field('name', $._name),
      $._type_spec,
    ),

    structure: $ => seq(
      choice('structure', 'class'),
      field('name', $.identifier),
      optional(field('binders', $.binders)),
      optional(field('extends', seq('extends', commaSep1($._expression)))),
      optional($._type_spec),
      optional(seq(
        choice(':=', 'where'),
        $._layout_start,
        repeat(seq(field('fields', choice($.structure_field, $._bracketed_binder)), optional($._layout_semicolon))),
        optional($._layout_end),
      )),
      optional(seq('deriving', commaSep1($.identifier))),
    ),

    // Structure fields: `x : T` or `x : T := default` or `x := default`
    structure_field: $ => seq(
      field('name', $.identifier),
      repeat($._bracketed_binder),
      choice(
        seq(':', field('type', $._expression), optional(seq(':=', field('default', $._expression)))),
        seq(':=', field('default', $._expression)),
      ),
    ),

    inductive: $ => seq(
      'inductive',
      field('name', $.identifier),
      optional(field('binders', $.binders)),
      optional($._type_spec),
      optional(choice(':=', 'where')),
      repeat(field('constructors', $.constructor)),
      optional(seq('deriving', commaSep1($.identifier))),
    ),

    constructor: $ => seq(
      '|',
      field('name', $._name),
      optional(field('binders', $.binders)),
      optional($._type_spec),
    ),

    // ============================================================
    // Binders
    // ============================================================

    binders: $ => repeat1(choice($.identifier, $._bracketed_binder)),

    // Quantifier binders: `x y : Nat` or `(x : Nat) {y : Nat}`
    // Bare identifiers can have a trailing `: Type` annotation
    _bracketed_binder: $ => choice(
      $.explicit_binder,
      $.implicit_binder,
      $.instance_binder,
    ),

    explicit_binder: $ => seq(
      '(',
      repeat1(field('name', $.identifier)),
      optional($._type_spec),
      optional(seq(':=', field('default', $._expression))),
      ')',
    ),

    implicit_binder: $ => seq(
      '{',
      repeat1(field('name', $.identifier)),
      optional($._type_spec),
      '}',
    ),

    instance_binder: $ => seq(
      '[',
      optional(seq(field('name', $.identifier), ':')),
      field('type', $._expression),
      ']',
    ),

    _type_spec: $ => seq(':', field('type', $._expression)),

    // ============================================================
    // Expressions
    // ============================================================

    _expression: $ => choice(
      $._atom,
      $.application,
      $.subscript,
      $.binary_expression,
      $.unary_expression,
      $.lift_method,
      $.borrowed,
      $.explicit,
      // postfix ! and ? are handled by subscript modifier and notation
      $.projection,
      $.arrow,
      $.fun,
      $.forall,
      $.exists,
      $.let,
      $.have,
      $.if,
      $.if_let,
      $.match,
      $.do,
      $.by,
    ),

    // Atoms: self-delimiting expressions that can appear as function arguments
    _atom: $ => choice(
      $.identifier,
      $.escaped_identifier,
      $.number,
      $.float,
      $.string,
      $.char,
      $.parenthesized,
      $.named_argument,
      $.tuple,
      $.anonymous_constructor,
      $.structure_instance,
      $.array,
      $.list,
      $.range,
      $.hole,
      $.synthetic_hole,
      $.quoted_name,
      $.double_quoted_name,
      $.ellipsis,
      $.sorry,
      $._boolean,
      $.cdot,
    ),

    // Function application: `f x y z`
    // Uses prec.left to parse `f x y` as `(f x) y`
    application: $ => prec.left(PREC.app, seq(
      field('name', $._expression),
      field('arguments', choice(
        $._atom,
        $.fun,
        $.if,
        $.match,
        $.do,
        $.by,
      )),
    )),

    // Array/list subscript: `arr[i]` or `arr[i]!` or `arr[i]?`
    _name: $ => seq(
      choice($.identifier, $.escaped_identifier),
      repeat(seq(token.immediate('.'), choice($.identifier, $.escaped_identifier))),
    ),

    // Projection: `x.foo` or `x.1` or `x.«name»` or `.field` (leading dot)
    projection: $ => prec.left(PREC.proj, seq(
      optional(field('term', $._expression)),
      choice(
        token.immediate('.'),  // For `x.field` where x is an expression
        '.',                   // For `.field` (leading dot)
      ),
      field('name', choice($.identifier, $.escaped_identifier, $.number)),
    )),

    // Arrow type: `A → B`
    arrow: $ => prec.right(PREC.low, seq(
      field('domain', $._expression),
      choice('->', '→'),
      field('codomain', $._expression),
    )),

    // Binary operators with table-driven precedence
    binary_expression: $ => {
      // 6 levels (reduced from 9) to minimize parser states.
      // Merged: or+$ → low, cons+add+product → add.
      const leftAssoc = [
        [PREC.low, choice('||', '∨', '<|>')],
        [PREC.and, choice('&&', '∧')],
        [PREC.compare, choice('==', '!=', '=', '<', '>', '<=', '>=', '≤', '≥', '≠',
                               '∣', '↔', '⊢')],
        [PREC.add, choice('+', '-', '++', '∪', '∩', '×')],
        [PREC.mul, choice('*', '/', '%')],
        [PREC.app + 1, choice('|>', '|>.')],
      ];

      // Right-associative: $, <|, ::, ^, ∘
      const rightAssoc = [
        [PREC.low, '$'],
        [PREC.add, '::'],
        [PREC.mul, choice('^', '∘')],
        [PREC.app + 1, '<|'],
      ];

      return choice(
        ...leftAssoc.map(([precedence, operator]) =>
          prec.left(precedence, seq(
            field('left', $._expression),
            field('operator', operator),
            field('right', $._expression),
          )),
        ),
        ...rightAssoc.map(([precedence, operator]) =>
          prec.right(precedence, seq(
            field('left', $._expression),
            field('operator', operator),
            field('right', $._expression),
          )),
        ),
      );
    },

    // Prefix operators
    lift_method: $ => prec(PREC.unary, seq(
      choice('←', '<-'),
      field('operand', $._expression),
    )),

    // Borrowed: `@& expr` — single token so parser distinguishes from `@[` attributes
    fun: $ => prec.right(seq(
      choice('fun', 'λ'),
      choice(
        seq(
          field('binders', repeat1(choice($._pattern, $._bracketed_binder))),
          '=>',
          $._layout_start,
          field('body', $._expression),
          optional($._layout_end),
        ),
        repeat1($.match_arm),
      ),
    )),

    // Universal quantifier: `∀ x, P x`
    have: $ => prec.right(seq(
      'have',
      optional(field('name', $.identifier)),
      optional($._type_spec),
      $._binding_body,
    )),

    // Shared `:= value [; body]` tail for `let` and `have` — extracted
    // so the parser reuses states across both forms.
    _binding_body: $ => prec.right(seq(
      ':=',
      field('value', $._expression),
      optional(seq(
        choice(';', $._layout_semicolon),
        field('body', $._expression),
      )),
    )),

    // ============================================================
    // Tactic mode (entered via `by`)
    // Tactics are a separate syntactic category from expressions.
    // Expressions can contain `by` blocks, but never raw tactics.
    // ============================================================

    // `by` is the only entry point from expression world into tactic world.
    let: $ => prec.right(seq(
      'let',
      field('pattern', $._pattern),
      optional($._type_spec),
      $._binding_body,
    )),

    // If expression: `if cond then t else e`
    // Also handles `if h : cond then t else e` (dependent if with hypothesis)
    if: $ => prec.right(seq(
      'if',
      optional(seq(field('hyp', $.identifier), ':')),
      field('condition', $._expression),
      $._then_else,
    )),

    // Shared `then expr [else expr]` tail for `if` and `if_let` — extracted
    // so the parser reuses states across both forms.
    _then_else: $ => prec.right(seq(
      'then',
      field('then', $._expression),
      optional(seq('else', field('else', $._expression))),
    )),

    // If-let pattern matching: `if let some x := e then ...`
    // Parsed as do-element or standalone, uses `let` keyword after `if`
    _pattern: $ => choice(
      $.identifier,
      $.hole,
      $.tuple_pattern,
      $.constructor_pattern,
    ),

    // Tuple pattern: `(a, b)` or `(a, b, c)`
    constructor_pattern: $ => prec.left(PREC.app, seq(
      field('constructor', $.identifier),
      repeat1(field('arg', $._pattern)),
    )),

    // Match expression (prec.left to consume as many arms as possible)
    match_arm: $ => seq(
      '|',
      field('patterns', commaSep1($._expression)),
      '=>',
      field('body', $._expression),
    ),

    // Do notation with layout-sensitive parsing
    // Elements are separated by newlines at the same indentation level
    parenthesized: $ => seq(
      '(',
      optional(seq(
        $._expression,
        optional(seq(':', field('type', $._expression))),
      )),
      ')',
    ),

    // Named argument: `(name := value)`
    anonymous_constructor: $ => seq('⟨', commaSep($._expression), '⟩'),

    identifier: _ => /[_a-zA-Zα-ωΑ-Ωℕℤℚℝℂ∇][_a-zA-Z0-9'α-ωΑ-Ωℕℤℚℝℂ∇?!]*/,

    // Escaped identifier: `«name with spaces»`
    number: _ => choice(
      /\d+/,                    // decimal
      /0x[0-9a-fA-F]+/,         // hex
      /0b[01]+/,                // binary
      /0o[0-7]+/,               // octal
    ),

    string: $ => seq(
      '"',
      repeat(choice(
        $._string_content,
        $.escape_sequence,
        $.interpolation,
      )),
      '"',
    ),

    _string_content: _ => token.immediate(prec(1, /[^"\\{]+/)),

    hole: _ => '_',

    // Cdot: `·` (sugared anonymous function placeholder)
    sorry: _ => 'sorry',

    true: _ => choice('true', 'True'),
    false: _ => choice('false', 'False'),

    // ============================================================
    // Comments
    // ============================================================

    comment: _ => token(choice(
      seq('--', /.*/),
      seq('/-', /[^-]*(-+[^-/][^-]*)*-*/, '-/'),
    )),
  },
});
