test/corpus/declarations.txt
======
Simple
======

def sampleFunction1 x := x*x + 3

def result1 := sampleFunction1 4573

theorem foo : p := sorry

---

(module
  (definition
    (identifier)
    (binders
      (identifier))
    (binary_expression
      (binary_expression
        (identifier)
        (identifier))
      (number)))
  (definition
    (identifier)
    (application
      (identifier)
      (number)))
  (definition
    (identifier)
    (identifier)
    (sorry)))

=========
Annotated
=========

def sampleFunction2 (x : Nat) := 2*x*x - x + 3

---

(module
  (definition
    name: (identifier)
    binders: (binders
      (explicit_binder
        name: (identifier)
        type: (identifier)))
    body: (binary_expression
      left: (binary_expression
        left: (binary_expression
          left: (binary_expression
            left: (number)
            right: (identifier))
          right: (identifier))
        right: (identifier))
      right: (number))))

==================
Multiple Annotated
==================

def sampleFunction2 (x y : Nat) := x + y

---

(module
  (definition
    name: (identifier)
    binders: (binders
      (explicit_binder
        name: (identifier)
        name: (identifier)
        type: (identifier)))
    body: (binary_expression
      left: (identifier)
      right: (identifier))))

==================
Implicit Arguments
==================

def foo {a} {b c : Nat} v w (x y) (z : Nat) := a + b + v + w + x + y

---

(module
  (definition
    name: (identifier)
    binders: (binders
      (implicit_binder
        name: (identifier))
      (implicit_binder
        name: (identifier)
        name: (identifier)
        type: (identifier))
      (identifier)
      (identifier)
      (explicit_binder
        name: (identifier)
        name: (identifier))
      (explicit_binder
        name: (identifier)
        type: (identifier)))
    body: (binary_expression
      left: (binary_expression
        left: (binary_expression
          left: (binary_expression
            left: (binary_expression
              left: (identifier)
              right: (identifier))
            right: (identifier))
          right: (identifier))
        right: (identifier))
      right: (identifier))))

============================
Typeclass Resolved Arguments
============================

def foo [Bar x] [y : Baz] : x := 1

---

(module
  (definition
    name: (identifier)
    binders: (binders
      (instance_binder
        type: (application
          name: (identifier)
          arguments: (identifier)))
      (instance_binder
        name: (identifier)
        type: (identifier)))
    type: (identifier)
    body: (number)))

====================
First Class Function
====================

def twice (f : Nat → Nat) (a : Nat) :=
  f (f a)

---

(module
  (definition
    name: (identifier)
    binders: (binders
      (explicit_binder
        name: (identifier)
        type: (arrow
          domain: (identifier)
          codomain: (identifier)))
      (explicit_binder
        name: (identifier)
        type: (identifier)))
    body: (application
      name: (identifier)
      arguments: (parenthesized
        (application
          name: (identifier)
          arguments: (identifier))))))

====================
Function Return Type
====================

def foo : Nat -> Nat := id

---

(module
  (definition
    name: (identifier)
    type: (arrow
      domain: (identifier)
      codomain: (identifier))
    body: (identifier)))

==================================
Multiargument Function Return Type
==================================

def foo : Nat -> Nat -> Nat -> Nat := id

---

(module
  (definition
    name: (identifier)
    type: (arrow
      domain: (identifier)
      codomain: (arrow
        domain: (identifier)
        codomain: (arrow
          domain: (identifier)
          codomain: (identifier))))
    body: (identifier)))

=============
Def of Struct
=============

def f : Foo where
  bar := 3

---

(module
  (definition
    name: (identifier)
    type: (identifier)
    body: (where_decl
      name: (identifier)
      body: (number))))

==================
Match Syntax Sugar
==================

def foo : Nat → Nat
  | 0 => 2
  | 2 => 3
  | _ => 5

---

(module
  (definition
    name: (identifier)
    type: (arrow
      domain: (identifier)
      codomain: (identifier))
    (match_arm
      patterns: (number)
      body: (number))
    (match_arm
      patterns: (number)
      body: (number))
    (match_arm
      patterns: (hole)
      body: (number))))

==========================================
Match Syntax Sugar With Anonymous Function
==========================================

def foo : Nat -> Bool :=
  fun
    | 0 => true
    | _ => false

---

(module
  (definition
    name: (identifier)
    type: (arrow
      (identifier)
      (identifier))
    body: (fun
      lhs: (number)
      (true)
      lhs: (hole)
      (false))))

=======================
Multimatch Syntax Sugar
=======================

def foo : Nat → Nat -> Nat
  | 0, foo => 2
  | 2, bar => 3
  | _, _ => 5

---

(module
  (definition
    name: (identifier)
    type: (arrow
      domain: (identifier)
      codomain: (arrow
        domain: (identifier)
        codomain: (identifier)))
    (match_arm
      patterns: (number)
      patterns: (identifier)
      body: (number))
    (match_arm
      patterns: (number)
      patterns: (identifier)
      body: (number))
    (match_arm
      patterns: (hole)
      patterns: (hole)
      body: (number))))

============
Conditionals
============

def sampleFunction3 (x : Int) :=
if x > 100 then
  2*x*x - x + 3
else
  2*x*x + x - 37

---

(module
  (definition
    name: (identifier)
    binders: (binders
      (explicit_binder
        name: (identifier)
        type: (identifier)))
    body: (if
      condition: (binary_expression
        left: (identifier)
        right: (number))
      then: (binary_expression
        left: (binary_expression
          left: (binary_expression
            left: (binary_expression
              left: (number)
              right: (identifier))
            right: (identifier))
          right: (identifier))
        right: (number))
      else: (binary_expression
        left: (binary_expression
          left: (binary_expression
            left: (binary_expression
              left: (number)
              right: (identifier))
            right: (identifier))
          right: (identifier))
        right: (number)))))

=======
Theorem
=======

theorem twiceAdd2 (a : Nat) : twice (fun x => x + 2) a = a + 4 :=
-- The proof is by reflexivity. Lean "symbolically" reduces both sides of the equality
-- until they are identical.
  rfl

---

(module
  (definition
    name: (identifier)
    binders: (binders
      (explicit_binder
        name: (identifier)
        type: (identifier)))
    type: (binary_expression
      left: (application
        name: (application
          name: (identifier)
          arguments: (parenthesized
            (fun
              binders: (identifier)
              body: (binary_expression
                left: (identifier)
                right: (number)))))
        arguments: (identifier))
      right: (binary_expression
        left: (identifier)
        right: (number)))
    (comment)
    (comment)
    body: (identifier)))

============================
Theorem With Expression Body
============================

theorem bar : 2 * 3 = 3 * 2 := Nat.mul_comm 2 3

---

(module
  (definition
    name: (identifier)
    type: (binary_expression
      left: (binary_expression
        left: (number)
        right: (number))
      right: (binary_expression
        left: (number)
        right: (number)))
    body: (application
      name: (application
        name: (projection
          term: (identifier)
          name: (identifier))
        arguments: (number))
      arguments: (number))))

=======================
Theorem With Match Body
=======================

theorem foo {p : α × β} :
  p = p ↔ p = p
  | (p1, p2), (q1, q2) => sorry

---

(module
  (definition
    name: (identifier)
    (binders
      (implicit_binder
        name: (identifier)
        type: (binary_expression
          (identifier)
          (identifier))))
    type: (binary_expression
      (binary_expression
        (identifier)
        (binary_expression
          (identifier)
          (identifier)))
      (identifier))
    body: (match_arm
      lhs: (parenthesized
        (identifier)
        (tuple_tail
          (identifier)))
      lhs: (parenthesized
        (identifier)
        (tuple_tail
          (identifier)))
      (sorry))))

====================
Theorem Missing Type
====================

theorem foo := sorry

---

(module
  (definition
    (identifier)
    (sorry)))

=========
Structure
=========

structure Point (α : Type u) where
  w : String := "foo"
  x : α
  y : Foo Bar Baz Quux
  z := 0

---

(module
  (structure
    name: (identifier)
    binders: (binders
      (explicit_binder
        name: (identifier)
        type: (application
          name: (identifier)
          arguments: (identifier))))
    fields: (structure_field
      name: (identifier)
      type: (identifier)
      default: (string))
    fields: (structure_field
      name: (identifier)
      type: (identifier))
    fields: (structure_field
      name: (identifier)
      type: (application
        name: (application
          name: (application
            name: (identifier)
            arguments: (identifier))
          arguments: (identifier))
        arguments: (identifier)))
    fields: (structure_field
      name: (identifier)
      default: (number))))

=================
Structure Extends
=================

structure Bar extends Foo where
  bit : Bool

class Baz extends Quux where
  bit : Bool

---

(module
  (structure
    name: (identifier)
    extends: (identifier)
    fields: (structure_field
      name: (identifier)
      type: (identifier)))
  (structure
    name: (identifier)
    extends: (identifier)
    fields: (structure_field
      name: (identifier)
      type: (identifier))))

==========================
Structure Multiple Extends
==========================

structure Bar extends Foo, Bar α where
  bit : Bool

---

(module
  (structure
    name: (identifier)
    extends: (identifier)
    extends: (application
      name: (identifier)
      arguments: (identifier))
    fields: (structure_field
      name: (identifier)
      type: (identifier))))

===================
Structure No Fields
===================

structure Foo where

---

(module
  (structure
    name: (identifier)))

=====
Class
=====

class Quux (a : Type) where
  foo : String := "foo"
  add : a -> a -> a
  bar := 0
  baz {x : String} : String

---

(module
  (structure
    name: (identifier)
    (binders
      (explicit_binder
        name: (identifier)
        type: (identifier)))
    fields: (structure_field
      name: (identifier)
      type: (identifier)
      default: (string))
    fields: (structure_field
      name: (identifier)
      type: (arrow
        (identifier)
        (arrow
          (identifier)
          (identifier))))
    fields: (structure_field
      name: (identifier)
      default: (number))
    fields: (structure_field
      name: (identifier))
    fields: (implicit_binder
      name: (identifier)
      type: (identifier))
    (ERROR)
    fields: (structure_field
      name: (identifier))))

===============
Class No Fields
===============

class Foo where

---

(module
  (structure
    name: (identifier)))

========
Instance
========

instance : ToString Foo where
  toString (d : Foo) : String := "Foo"

---

(module
  (definition
    type: (application
      name: (identifier)
      arguments: (identifier))
    body: (where_decl
      name: (identifier)
      binders: (explicit_binder
        name: (identifier)
        type: (identifier))
      type: (identifier)
      body: (string))))

==============
Named Instance
==============

instance toStringFoo : ToString Foo where
  toString (d : Foo) : String := "Foo"

---

(module
  (definition
    name: (identifier)
    type: (application
      name: (identifier)
      arguments: (identifier))
    body: (where_decl
      name: (identifier)
      binders: (explicit_binder
        name: (identifier)
        type: (identifier))
      type: (identifier)
      body: (string))))

========================
Instance With Parameters
========================

instance {f : Foo} (g : Bar 3) : Quux where
  foo := f

---

(module
  (definition
    binders: (implicit_binder
      name: (identifier)
      type: (identifier))
    binders: (explicit_binder
      name: (identifier)
      type: (application
        name: (identifier)
        arguments: (number)))
    type: (identifier)
    body: (where_decl
      name: (identifier)
      body: (identifier))))

================
Chained Instance
================

instance [Inhabited b] : Inhabited (a -> b) where
  default := fun _ => arbitrary

---

(module
  (definition
    binders: (instance_binder
      type: (application
        name: (identifier)
        arguments: (identifier)))
    type: (application
      name: (identifier)
      arguments: (parenthesized
        (arrow
          domain: (identifier)
          codomain: (identifier))))
    body: (where_decl
      name: (identifier)
      body: (fun
        binders: (hole)
        body: (identifier)))))

===================================
Instance With Inductive Constructor
===================================

instance : Inhabited Nat := ⟨0⟩

---

(module
  (definition
    type: (application
      name: (identifier)
      arguments: (identifier))
    body: (anonymous_constructor
      (number))))

==============================
Instance With Field Definition
==============================

instance : Add Foo := Foo.add

---

(module
  (definition
    type: (application
      name: (identifier)
      arguments: (identifier))
    body: (projection
      term: (identifier)
      name: (identifier))))

========================================
Instance Field With Function Return Type
========================================

instance : ToString Foo where
  toString : Foo → String := λ f => s!"Foo"

---

(module
  (definition
    type: (application
      name: (identifier)
      arguments: (identifier))
    body: (where_decl
      name: (identifier)
      type: (arrow
        domain: (identifier)
        codomain: (identifier))
      body: (fun
        binders: (identifier)
        body: (application
          name: (identifier)
          arguments: (string))))))

==================================
Instance Field Without Return Type
==================================

instance : ToString Foo where
  toString d := "Foo"

---

(module
  (definition
    type: (application
      name: (identifier)
      arguments: (identifier))
    body: (where_decl
      name: (identifier)
      binders: (identifier)
      body: (string))))

================================
Instance With Match Syntax Sugar
================================

instance : ToString Foo where
  toString
  | _ => "foo"

---

(module
  (definition
    type: (application
      name: (identifier)
      arguments: (identifier))
    body: (where_decl
      name: (identifier)
      body: (match_arm
        lhs: (hole)
        (string)))))

=======
Example
=======

example : (fun x => x * 2) 4 < 3 = false := rfl

---

(module
  (example
    (binary_expression
      (binary_expression
        (application
          (parenthesized
            (fun
              (identifier)
              (binary_expression
                (identifier)
                (number))))
          (number))
        (number))
      (false))
    (identifier)))

=======================
Example With Parameters
=======================

example {G : Type} [Add G] (g : G) : g + g = g + g := rfl

---

(module
  (example
    binders: (binders
      (implicit_binder
        name: (identifier)
        type: (identifier))
      (instance_binder
        type: (application
          name: (identifier)
          arguments: (identifier)))
      (explicit_binder
        name: (identifier)
        type: (identifier)))
    type: (binary_expression
      left: (binary_expression
        left: (identifier)
        right: (identifier))
      right: (binary_expression
        left: (identifier)
        right: (identifier)))
    body: (identifier)))

======================================================
Noncomputable / Partial / Protected / Private / Unsafe
======================================================

partial def foo := 12

partial def g x : Nat := g (x + 1)

noncomputable def foo := 12

protected unsafe def foo := 12

unsafe inductive Foo | foo

private structure Foo where x : Nat

protected class Bar where x : Nat

protected instance : Quux where x := 2

noncomputable instance : Foo where x := 2

private theorem bar : 2 = 2 := rfl

protected example : 2 = 2 := rfl

noncomputable example : 2 = 2 := rfl

protected constant FooBar : Nat

noncomputable constant FooBar : Nat

---

(module
  (definition
    (identifier)
    (number))
  (definition
    (identifier)
    (binders
      (identifier))
    (identifier)
    (application
      (identifier)
      (parenthesized
        (binary_expression
          (identifier)
          (number)))))
  (definition
    (identifier)
    (number))
  (definition
    (identifier)
    (number))
  (inductive
    (identifier)
    (constructor
      (identifier)))
  (structure
    (identifier)
    (structure_field
      (identifier)
      (identifier)))
  (structure
    (identifier)
    (structure_field
      (identifier)
      (identifier)))
  (definition
    (identifier)
    (where_decl
      (identifier)
      (number)))
  (definition
    (identifier)
    (where_decl
      (identifier)
      (number)))
  (definition
    (identifier)
    (binary_expression
      (number)
      (number))
    (identifier))
  (example
    (binary_expression
      (number)
      (number))
    (identifier))
  (example
    (binary_expression
      (number)
      (number))
    (identifier))
  (constant
    (identifier)
    (identifier))
  (constant
    (identifier)
    (identifier)))

==========
Attributes
==========

@[reducible] def f := 12

@[inline] instance : Foo := ⟨7⟩

@[simp] theorem twotwo : 2 = 2 := rfl

@[inline] constant FooBar : Nat

---

(module
  (declaration
    attributes: (attributes
      name: (identifier))
    (definition
      name: (identifier)
      body: (number)))
  (declaration
    attributes: (attributes
      name: (identifier))
    (definition
      type: (identifier)
      body: (anonymous_constructor
        (number))))
  (declaration
    attributes: (attributes
      name: (identifier))
    (definition
      name: (identifier)
      type: (binary_expression
        left: (number)
        right: (number))
      body: (identifier)))
  (declaration
    attributes: (attributes
      name: (identifier))
    (constant
      name: (identifier)
      type: (identifier))))

===================
Multiple Attributes
===================

@[reducible, inline] def f := 12

---

(module
  (declaration
    attributes: (attributes
      name: (identifier)
      name: (identifier))
    (definition
      name: (identifier)
      body: (number))))

======================
Dotted Name Attributes
======================

@[foo.bar baz.quux] def f := 12

---

(module
  (declaration
    (attributes
      name: (identifier)
      name: (identifier))
    (definition
      name: (identifier)
      body: (number))))

=================
Missing Attribute
=================

@[] def f := 12

---

(module
  (declaration
    (attributes
      name: (identifier
        (MISSING _identifier)))
    (definition
      name: (identifier)
      body: (number))))

================
Extern Attribute
================

@[extern "foo"] def f := 12

---

(module
  (declaration
    attributes: (attributes
      extern: (string))
    (definition
      name: (identifier)
      body: (number))))

==============================
Explicit Attribute Declaration
==============================

attribute [reducible] f
attribute [simp, inline] Foo

---

(module
  (attribute
    (identifier)
    (identifier))
  (attribute
    (identifier)
    (identifier)
    (identifier)))

==========================
Explicit Attribute Removal
==========================

attribute [-reducible] f
attribute [simp, -inline, -reducible] Foo

---

(module
  (attribute
    name: (identifier)
    term: (identifier))
  (attribute
    name: (identifier)
    name: (identifier)
    name: (identifier)
    term: (identifier)))

====================================
Empty Explicit Attribute Declaration
====================================

attribute [] f

---

(module
  (attribute
    (identifier
      (MISSING _identifier))
    (identifier)))

======================
Partial With Attribute
======================

@[reducible] partial def f := 12

---

(module
  (declaration
    attributes: (attributes
      name: (identifier))
    (definition
      name: (identifier)
      body: (number))))

==============
Inductive Type
==============

inductive FooBar where
  | foo : FooBar
  | bar.baz : FooBar
  | spam : Nat → FooBar
  | quux {T: Type} [Add T] (x y : Nat) : Nat → FooBar

---

(module
  (inductive
    name: (identifier)
    constructors: (constructor
      name: (identifier)
      type: (identifier))
    constructors: (constructor
      name: (identifier)
      type: (identifier))
    constructors: (constructor
      name: (identifier)
      type: (arrow
        (identifier)
        (identifier)))
    constructors: (constructor
      name: (identifier)
      (binders
        (implicit_binder
          name: (identifier)
          type: (identifier))
        (instance_binder
          type: (application
            name: (identifier)
            arguments: (identifier)))
        (explicit_binder
          name: (identifier)
          name: (identifier)
          type: (identifier)))
      type: (arrow
        (identifier)
        (identifier)))))

==============================
Inductive Type No Constructors
==============================

inductive Foo

---

(module
  (inductive
    name: (identifier)))

==============================
Inductive Type With Parameters
==============================

inductive Foo (F : Type) | x (foo : F)

---

(module
  (inductive
    name: (identifier)
    binders: (binders
      (explicit_binder
        name: (identifier)
        type: (identifier)))
    constructors: (constructor
      name: (identifier)
      binders: (binders
        (explicit_binder
          name: (identifier)
          type: (identifier))))))

=======================
Inductive Type One Line
=======================

inductive Bit | bit0 | bit1

---

(module
  (inductive
    name: (identifier)
    constructors: (constructor
      name: (identifier))
    constructors: (constructor
      name: (identifier))))

================================
Inductive Type Superfluous Where
================================

inductive Bit where | bit0 | bit1

---

(module
  (inductive
    name: (identifier)
    constructors: (constructor
      name: (identifier))
    constructors: (constructor
      name: (identifier))))

========================
Inductive Type With Type
========================

inductive Foo : Bar

---

(module
  (inductive
    name: (identifier)
    type: (identifier)))

==========================
Inductive Type Colon Equal
==========================

inductive Foo :=
| Bar

---

(module
  (inductive
    name: (identifier)
    constructors: (constructor
      name: (identifier))))

====================
Class Inductive Type
====================

class inductive FooBar where
  | foo : FooBar
  | bar.baz : FooBar
  | spam : Nat → FooBar
  | quux {T: Type} [Add T] (x y : Nat) : Nat → FooBar

---

(module
  (class_inductive
    name: (identifier)
    constructors: (constructor
      name: (identifier)
      type: (identifier))
    constructors: (constructor
      name: (identifier)
      type: (identifier))
    constructors: (constructor
      name: (identifier)
      type: (arrow
        (identifier)
        (identifier)))
    constructors: (constructor
      name: (identifier)
      (binders
        (implicit_binder
          name: (identifier)
          type: (identifier))
        (instance_binder
          type: (application
            name: (identifier)
            arguments: (identifier)))
        (explicit_binder
          name: (identifier)
          name: (identifier)
          type: (identifier)))
      type: (arrow
        (identifier)
        (identifier)))))

=================
Inline Namespaced
=================

def foo.bar.baz := 12

structure Foo.Bar.Baz where
  x : Nat

class Foo.Bar.Baz.Quux where
  x : Nat

instance Spam.Eggs : Foo.Bar.Baz.Quux where
  x := 3

theorem Foo.Bar.Baz.Quux.Cheese : 2 = 2 := rfl

inductive A.B | C

---

(module
  (definition
    name: (identifier)
    body: (number))
  (structure
    name: (identifier)
    fields: (structure_field
      name: (identifier)
      type: (identifier)))
  (structure
    name: (identifier)
    fields: (structure_field
      name: (identifier)
      type: (identifier)))
  (definition
    name: (identifier)
    type: (projection
      term: (identifier)
      name: (identifier))
    body: (where_decl
      (identifier)
      (number)))
  (definition
    name: (identifier)
    type: (binary_expression
      (number)
      (number))
    body: (identifier))
  (inductive
    name: (identifier)
    constructors: (constructor
      name: (identifier))))

===
Let
===

def foo :=
  let foo := 12
  foo

---

(module
  (definition
    name: (identifier)
    body: (let
      pattern: (identifier)
      value: (number)
      body: (identifier))))

=============
Let Annotated
=============

def foo :=
  let foo : Nat := 12
  foo

---

(module
  (definition
    name: (identifier)
    body: (let
      pattern: (identifier)
      type: (identifier)
      value: (number)
      body: (identifier))))

============
Let Function
============
